[project]
name = "claude-code-human-in-loop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=5.0.0",
    "fastapi>=0.100.0",
    "httpx>=0.25.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    "langgraph>=0.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.28.0",
    "tavily-python>=0.3.0",
    "uvicorn[standard]>=0.24.0",
]
